arrumei o bug